<resources>
    <string name="app_name">Reservatium</string>

    <string name="navigation_reservations">Reservations</string>
    <string name="navigation_customers">Customers</string>
    <string name="navigation_rooms">Rooms</string>

    <string name="editor_new_reservation">Create Reservation</string>
    <string name="editor_edit_reservation">Edit Reservation</string>
    <string name="editor_new_customer">Create Customer</string>
    <string name="editor_edit_customer">Edit Customer</string>
    <string name="chooser_room">Select Room</string>
    <string name="chooser_customer">Select Customer</string>

    <string name="menu_add">Add</string>

    <string name="input_reservations">Reservations</string>
    <string name="input_room">Room</string>
    <string name="input_customer">Customer</string>
    <string name="input_start_date">Start Date</string>
    <string name="input_end_date">End Date</string>
    <string name="input_number_of_guests">Number of Guests</string>
    <string name="input_customer_info">Customer Information</string>
    <string name="input_first_name">First Name</string>
    <string name="input_last_name">Last Name</string>
    <string name="input_not_set">Not Set</string>

    <string name="button_save">Save</string>
    <string name="button_continue">Continue</string>
    <string name="button_reschedule">Reschedule</string>
    <string name="button_change_room">Change room</string>
    <string name="button_change_customer">Change customer</string>

    <string name="status_occupied">Occupied</string>
    <string name="status_available">Available</string>

    <string name="empty_reservations">No Reservations</string>
    <string name="empty_customers">No Customers</string>

    <string name="feedback_reservation_inserted">Reservation added</string>
    <string name="feedback_reservation_removed">Reservation removed</string>
    <string name="feedback_reservation_updated">Reservation updated</string>
    <string name="feedback_customer_inserted">Customer added</string>
    <string name="feedback_customer_removed">Customer removed</string>
    <string name="feedback_customer_updated">Customer updated</string>
    <string name="feedback_room_updated">Room updated</string>
    <string name="feedback_date_updated">Date updated</string>

    <string name="error_reservation_empty_room">No room were specified</string>
    <string name="error_reservation_empty_customer">No customer were specified</string>
    <string name="error_reservation_empty_date">No date were specified</string>
    <string name="error_reservation_conflict_room_title">Room conflict in the Reservation</string>
    <string name="error_reservation_conflict_room_message">The selected room is currently being occupied at the selected date. Choose another date or another room to continue.</string>
    <string name="error_reservation_conflict_customer_title">Customer conflict in the Reservation</string>
    <string name="error_reservation_conflict_customer_message">The selected customer is currently booked in another room at the selected date. Choose another date or another customer to continue.</string>
    <string name="error_customer_no_first_name">You forgot to enter the customer\'s first name</string>
    <string name="error_customer_no_last_name">You forgot to enter the customer\'s last name</string>

    <string name="room_concat">Room %1$s</string>
</resources>