<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_reservations"
        android:title="@string/navigation_reservations"
        android:icon="@drawable/ic_outline_luggage_24"
        app:exb_color="?attr/colorOnPrimary"/>

    <item
        android:id="@+id/navigation_customers"
        android:title="@string/navigation_customers"
        android:icon="@drawable/ic_outline_people_24"
        app:exb_color="?attr/colorOnPrimary"/>

    <item
        android:id="@+id/navigation_rooms"
        android:title="@string/navigation_rooms"
        android:icon="@drawable/ic_outline_hotel_24"
        app:exb_color="?attr/colorOnPrimary"/>

</menu>