<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_surface">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_surface"
            android:elevation="0dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_padding">

            <TextView
                android:id="@+id/startDateTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:minLines="2"
                android:maxLines="2"
                android:text="@string/input_start_date"
                android:textSize="22sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/divider"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/divider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_padding_medium"
                android:layout_marginEnd="@dimen/activity_padding_medium"
                app:srcCompat="@drawable/ic_outline_keyboard_arrow_right_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/startDateTextView"
                app:layout_constraintEnd_toStartOf="@id/endDateTextView"/>

            <TextView
                android:id="@+id/endDateTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minLines="2"
                android:maxLines="2"
                android:gravity="end|center_vertical"
                android:text="@string/input_end_date"
                android:textSize="22sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/divider"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/calendarLegendLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_spacing"
            layout="@layout/calendar_day_legend"/>

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.kizitonwose.calendarview.CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cv_dayViewResource="@layout/calendar_day_layout"
            app:cv_monthHeaderResource="@layout/calendar_month_legend"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/color_window_background"
            android:elevation="4dp">

            <Button
                android:id="@+id/actionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_padding"
                android:text="@string/button_save"/>

        </FrameLayout>

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>